fix/добавить overflow: visible в main.module.css чтобы тень кнопки не обрезалась

--- a/src/components/Main/main.module.css
+++ b/src/components/Main/main.module.css
@@ -8,7 +8,7 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 40px;
   height: 100%;
-  overflow: hidden;
+  overflow: visible;
 }
 
 
